--- a/package.json
+++ b/package.json
@@ -20,5 +20,18 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@fontsource/roboto": "^4.5.8",
+        "@mui/icons-material": "^5.11.0",
+        "@mui/material": "^5.11.4",
+        "@mui/x-data-grid": "^5.17.18",
+        "moment": "^2.29.4",
+        "moment-timezone": "^0.5.40",
+        "react-icons": "^4.7.1",
+        "react-moment": "^1.1.3",
+        "uuid": "^9.0.0"
     }
 }
