--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@mui/icons-material": "^5.11.0",
         "@mui/material": "^5.11.4",
         "@mui/x-data-grid": "^5.17.18",
+        "lodash.debounce": "^4.0.8",
         "moment": "^2.29.4",
         "moment-timezone": "^0.5.40",
         "react-icons": "^4.7.1",
